@@ -1,3 +1,3 @@
-Copyright 2001-2004
+Copyright 2001-2005
 G. Pape
 http://smarden.org/runit/
